--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ click==6.7
 Faker==0.7.7
 nose==1.3.7
 packaging==16.8
-pymongo==3.3.1
+pip2pi==0.6.8
+pymongo==3.4.0
 pyparsing==2.1.10
 python-dateutil==2.6.0
-pytz==2016.7
+pytz==2016.10
 six==1.10.0
 tonyg-rfc3339==0.1
