--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-bson
 rfc3339
-appdirs==1.4.0
-click==6.7
-Faker==0.7.7
-finstruments==0.0.1
-nose==1.3.7
-packaging==16.8
-pip2pi==0.6.8
-pymongo==3.4.0
-pyparsing==2.1.10
-python-dateutil==2.6.0
-pytz==2016.10
-six==1.10.0
+appdirs
+click
+Faker
+packaging
+pymongo
+pyparsing
+python-dateutil
+pytz
+six
